wasm gc: fix issues related to virtual calls