@@ -127,7 +127,7 @@ public class VirtualTableBuilder {
             }
         }
 
-        List<MethodDescriptor> methodsAtCallSites = methodsUsedAtCallSites.get(className);
+        var methodsAtCallSites = methodsUsedAtCallSites.get(className);
         if (methodsAtCallSites != null) {
             for (MethodDescriptor methodDesc : methodsAtCallSites) {
                 if (cls.hasModifier(ElementModifier.FINAL) && !table.entries.containsKey(methodDesc)) {
@@ -162,7 +162,7 @@ public class VirtualTableBuilder {
     }
 
     private void copyEntries(TableBuilder source, TableBuilder target) {
-        for (Map.Entry<MethodDescriptor, EntryBuilder> entry : source.entries.entrySet()) {
+        for (var entry : source.entries.entrySet()) {
             EntryBuilder targetEntry = target.entries.computeIfAbsent(entry.getKey(), k -> new EntryBuilder());
             targetEntry.addParent(entry.getValue());
             if (entry.getValue().implementor != null && targetEntry.implementor == null) {
@@ -197,7 +197,7 @@ public class VirtualTableBuilder {
 
     private void liftEntries() {
         buildClassTree();
-        for (Map.Entry<MethodDescriptor, List<String>> group : groupMethods().entrySet()) {
+        for (var group : groupMethods().entrySet()) {
             String commonSuperclass = commonSuperclass(group.getValue());
             Set<String> visited = new HashSet<>();
             for (String cls : group.getValue()) {
@@ -397,17 +397,16 @@ public class VirtualTableBuilder {
             }
         }
 
-        List<MethodDescriptor> newMethods = context.methods.subList(methodsStart, context.methods.size());
+        var newMethods = context.methods.subList(methodsStart, context.methods.size());
         Set<MethodDescriptor> methodSet = new HashSet<>();
         for (MethodDescriptor method : newMethods) {
             if (method != null) {
                 methodSet.add(method);
             }
         }
-        List<? extends MethodDescriptor> readonlyNewMethods = Collections.unmodifiableList(
-                Arrays.asList(newMethods.toArray(new MethodDescriptor[0])));
-        VirtualTable resultTable = new VirtualTable(className, parent, readonlyNewMethods,
-                methodSet, resultEntries);
+        var readonlyNewMethods = Collections.unmodifiableList(Arrays.asList(
+                newMethods.toArray(new MethodDescriptor[0])));
+        var resultTable = new VirtualTable(className, parent, readonlyNewMethods, methodSet, resultEntries);
         result.virtualTables.put(className, resultTable);
 
         List<String> children = classChildren.get(className);
@@ -489,10 +488,9 @@ public class VirtualTableBuilder {
                 methodSet.add(method);
             }
 
-            List<? extends MethodDescriptor> readonlyNewMethods = Collections.unmodifiableList(
+            var readonlyMethods = Collections.unmodifiableList(
                     Arrays.asList(methods.toArray(new MethodDescriptor[0])));
-            VirtualTable resultTable = new VirtualTable(className, null, readonlyNewMethods,
-                    methodSet, Collections.emptyMap());
+            var resultTable = new VirtualTable(className, null, readonlyMethods, methodSet, Map.of());
             result.virtualTables.put(className, resultTable);
         }
     }
@@ -523,7 +521,8 @@ public class VirtualTableBuilder {
         List<MethodDescriptor> methods = new ArrayList<>();
     }
 
-    public static Set<MethodReference> getMethodsUsedOnCallSites(ListableClassHolderSource classes) {
+    public static Set<MethodReference> getMethodsUsedOnCallSites(ListableClassHolderSource classes,
+            boolean withCloneArray) {
         var virtualMethods = new HashSet<MethodReference>();
 
         for (var className : classes.getClassNames()) {
@@ -542,7 +541,9 @@ public class VirtualTableBuilder {
                                 virtualMethods.add(invoke.getMethod());
                             }
                         } else if (insn instanceof CloneArrayInstruction) {
-                            virtualMethods.add(new MethodReference(Object.class, "clone", Object.class));
+                            if (withCloneArray) {
+                                virtualMethods.add(new MethodReference(Object.class, "clone", Object.class));
+                            }
                         }
                     }
                 }
